Fix overflow on mobile: body/width: min-content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,10 @@ footer {
 body {
     min-height: 100vh;
     height: fit-content;
-    width: fit-content;
+    width: min-content;
     display: flex;
     flex-direction: column;
     align-items: normal;
-    margin: 4px;
     font-family: 'Barlow', sans-serif;
     font-weight: 400;
     font-size: 16px;
